fix: fix hover on small screens for select button

--- a/src/components/Shared/SelectButton/SelectButton.css
+++ b/src/components/Shared/SelectButton/SelectButton.css
@@ -38,20 +38,22 @@
   transition: opacity .1s linear;
 }
 
-.select-button__button:hover {
-  opacity: .5;
-
-  transition: opacity .1s linear;
-}
-
 .select-button__button_active {
   opacity: 1;
 
   transition: opacity .1s linear;
 }
 
-.select-button__button_active:hover {
-  opacity: 1;
+@media (min-width: 780px) {
+  .select-button__button:hover {
+    opacity: .5;
 
-  transition: none;
+    transition: opacity .1s linear;
+  }
+
+  .select-button__button_active:hover {
+    opacity: 1;
+
+    transition: none;
+  }
 }
